# nobu-cli

./: .env.example  .gitignore  Dockerfile  pyproject.toml
nobu/: app.py
nobu/clients/htb/: __init__.py  htb_client.py
nobu/clients/intigriti/: __init__.py  intigriti_client.py
nobu/clients/notion/: __init__.py  notion_client.py
nobu/clients/notion/filters/: __init__.py  filter_property.py  filter_value.py
nobu/clients/notion/sorts/: query_sort.py
nobu/cmd/: __init__.py  base_cmd.py  htb_cmd.py  intigriti_cmd.py  nobu_cmd.py
nobu/core/htb/: __init__.py  htb_academy_module.py  htb_feedback.py  htb_label.py  htb_parser.py  htb_service.py
nobu/core/htb/entities/: __init__.py  htb_play_info.py  (+2 more)
nobu/core/intigriti/: __init__.py  intigriti_parser.py  intigriti_service.py
nobu/core/notion/: notion_database.py  notion_parser.py  notion_service.py
nobu/settings/: settings.py
notion-templates/databases/: htb_machines.json
notion-templates/pages/: htb_machine.json
parabellum/: app.py
parabellum/clients/htb/: htb_client.py
parabellum/clients/notion/: notion_client.py
parabellum/cmd/: __init__.py  base_cmd.py  htb_cmd.py  notion_cmd.py  parabellum_cmd.py
parabellum/commons/: __init__.py  bearer_auth.py  dict_utils.py  printer.py
parabellum/core/: __init__.py  notion_parser.py  notion_service.py
parabellum/core/htb/: htb_academy_module_difficulty.py  htb_first_blood.py  htb_machine.py  htb_parser.py  htb_service.py
parabellum/core/notion/: __init__.py  notion_page.py  notion_parser.py  notion_service.py
parabellum/settings/: settings.py
(+7 files in other folders)
